<resources>
    <string name="app_name">Bitcoin ticker</string>
    <string name="title_price_buy">Buy Price</string>
    <string name="title_price_sell">Sell Price</string>
    <string name="title_price_15m">15m:</string>
    <string name="title_price_last">Last:</string>
    <string name="title_units">Units</string>
    <string name="title_amount">Amount</string>
    <string name="value_amount">Amount (%1$s)</string>
    <string name="amount_default_value">0.0</string>
    <string name="title_confirm">Confirm</string>
    <string name="title_cancel">Cancel</string>
</resources>
