<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_order">

    <TextView
        android:id="@+id/tvTitle"
        style="@style/Base.TextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title" />

    <LinearLayout
        android:id="@+id/layoutSell"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/default_margin_half"
        android:paddingEnd="0dp"
        app:layout_constraintEnd_toStartOf="@+id/layoutBuy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <TextView
            android:id="@+id/tvSell"
            style="@style/Base.TextView.Sell"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_price_sell" />

        <TextView
            android:id="@+id/tvPriceSell"
            style="@style/Base.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin_half"
            android:textSize="24sp"
            tools:text="7,449.79" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBuy"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bg_order_buy"
        android:orientation="vertical"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/default_margin_half"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/layoutSell"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <TextView
            android:id="@+id/tvBuy"
            style="@style/Base.TextView.Buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/title_price_buy" />

        <TextView
            android:id="@+id/tvPriceBuy"
            style="@style/Base.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="@dimen/default_margin_half"
            android:gravity="end"
            android:textSize="24sp"
            tools:text="7,450.79" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvSpread"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/layoutSell"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="1.00" />

    <TextView
        android:id="@+id/tvDelayed"
        style="@style/Base.TextView.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_half"
        android:text="@string/title_price_15m"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSell" />

    <TextView
        android:id="@+id/tvPriceDelayed"
        style="@style/Base.TextView.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_half"
        app:layout_constraintStart_toEndOf="@+id/tvDelayed"
        app:layout_constraintTop_toTopOf="@+id/tvDelayed"
        tools:text="123.12" />

    <TextView
        android:id="@+id/tvLast"
        style="@style/Base.TextView.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:text="@string/title_price_last"
        app:layout_constraintStart_toEndOf="@+id/tvPriceDelayed"
        app:layout_constraintTop_toTopOf="@+id/tvDelayed" />

    <TextView
        android:id="@+id/tvPriceLast"
        style="@style/Base.TextView.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_half"
        app:layout_constraintStart_toEndOf="@+id/tvLast"
        app:layout_constraintTop_toTopOf="@+id/tvLast"
        tools:text="321.12" />

    <TextView
        android:id="@+id/tvUnits"
        style="@style/Base.TextView.Buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/title_units"
        app:layout_constraintEnd_toEndOf="@+id/etUnits"
        app:layout_constraintStart_toStartOf="@+id/etUnits"
        app:layout_constraintTop_toBottomOf="@+id/tvPriceLast" />

    <TextView
        android:id="@+id/tvAmount"
        style="@style/Base.TextView.Buy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/etAmount"
        app:layout_constraintTop_toTopOf="@+id/tvUnits" />

    <EditText
        android:id="@+id/etUnits"
        style="@style/Base.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_half"
        android:layout_marginEnd="@dimen/default_margin_half"
        android:autofillHints="@string/title_amount"
        android:background="@drawable/bg_edit_text"
        android:gravity="center"
        android:hint="@string/title_units"
        android:inputType="numberDecimal"
        android:text="@string/amount_default_value"
        app:layout_constraintEnd_toStartOf="@+id/etAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUnits" />

    <EditText
        android:id="@+id/etAmount"
        style="@style/Base.EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_half"
        android:layout_marginEnd="@dimen/default_margin_half"
        android:autofillHints="@string/title_amount"
        android:background="@drawable/bg_edit_text"
        android:gravity="center"
        android:hint="@string/title_amount"
        android:inputType="numberDecimal"
        android:text="@string/amount_default_value"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/etUnits"
        app:layout_constraintTop_toBottomOf="@+id/tvAmount" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_half"
        android:layout_marginEnd="@dimen/default_margin_half"
        android:text="@string/title_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnConfirm"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_half"
        android:layout_marginEnd="@dimen/default_margin_half"
        android:backgroundTint="@color/bg_btn_buy_selector"
        android:enabled="false"
        android:text="@string/title_confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnCancel" />
</androidx.constraintlayout.widget.ConstraintLayout>